--- a/figure_scratchbook.Rmd
+++ b/figure_scratchbook.Rmd
@@ -27,20 +27,54 @@ library(janitor) # clean column names
 library(kableExtra) # pretty tables
 library(leaflet) # interactive maps
 library(sf) # spatial functions
+library(ISOcodes) # ISO country/province codes
 
 # Raw personal eBird data
-ebird_dat <- read_csv('./data/MyEBirdData.csv') %>%
-  clean_names()
+dat_personal <- read_csv("./data/MyEBirdData.csv") %>%
+  clean_names() %>% 
+  mutate(year = year(date))
+
+# eBird taxonomy 
+dat_taxonomy <- read_csv("./data/eBird_taxonomy_v2024.csv") %>% 
+  clean_names() %>%
+  separate(family, c("family", "family_common_name"), sep = "\\(|\\)") %>% 
+  select(-taxon_concept_id, -report_as)
+
+# ISO codes
+iso_country <- ISO_3166_1 %>% 
+  clean_names() %>% 
+  mutate(country = if_else(is.na(common_name), name, common_name)) %>% 
+  select("country_code"=alpha_2, country)
+iso_province <- ISO_3166_2 %>% 
+  rename(province_code = Code, province = Name, province_type = Type) %>% 
+  mutate(country_code = str_sub(province_code, end=2)) %>% 
+  select(-Parent)
+dat_iso <- full_join(iso_country, iso_province, by = "country_code")
+
+```
+
+```{r data wrangling}
+
+# Combine personal data, taxonomy, and ISO codes
+
+dat_all <- left_join(dat_personal, dat_taxonomy,
+                     by = c("scientific_name"="sci_name")) %>% 
+  left_join(dat_iso,
+            by = c("state_province"="province_code")) %>% 
+  select(-primary_com_name, -country_code)
 
 # Observation point data
-ebird_sf <- st_as_sf(ebird_dat, coords = c("longitude","latitude")) %>% 
+dat_sf <- st_as_sf(dat_all, coords = c("longitude","latitude")) %>% 
   st_set_crs(4326) # set CRS to WGS84
 
 ```
 
 ## Notes on data
 
-Data has one row per species per checklist.
+Personal data has one row per species per checklist.
+Taxonomic data from [eBird](https://www.birds.cornell.edu/clementschecklist/introduction/updateindex/october-2024/2024-citation-checklist-downloads/?__hstc=60209138.90d3e80156bd0bf8cea9061b5c8b0677.1737839952332.1737839952332.1737839952332.1&__hssc=60209138.2.1737839952335&__hsfp=3572963934&_ga=2.47631268.2048720750.1737839952-547846681.1737839951&_gl=1*1r2sx3a*_gcl_au*MTk1NTg3NjU4OC4xNzM3ODM5OTUw*_ga*NTQ3ODQ2NjgxLjE3Mzc4Mzk5NTE.*_ga_QR4NVXZ8BM*MTczNzgzOTk1MC4xLjEuMTczNzgzOTk1Mi41OC4wLjA).
+
+[Conditional function](https://forum.posit.co/t/conditional-pipelines/6076)
 
 Data cleaning to do:
 - Remove observations of upper-level taxa (e.g., Buteo sp.)
@@ -63,7 +97,7 @@ Toggle by taxonomic groups
 
 # Summary table
 
-summary <- ebird_dat %>% 
+summary <- dat_all %>% 
   group_by(common_name, scientific_name) %>% 
   summarize(n = length(common_name)) %>% 
   ungroup() %>% 
@@ -71,7 +105,7 @@ summary <- ebird_dat %>%
   top_n(10)
 
 kable(summary[,1:3], col.names = c("Common name", "Latin binomial", "Observations")) %>% 
-  kable_styling(bootstrap_options = c('striped', 'condensed'),
+  kable_styling(bootstrap_options = c("striped", "condensed"),
                 full_width = FALSE,
                 position = 'left') %>% 
   column_spec(2, italic = TRUE) %>% 
@@ -83,10 +117,50 @@ kable(summary[,1:3], col.names = c("Common name", "Latin binomial", "Observation
 
 ```{r interactive map}
 
-# Interactive map
-ebird_sf %>% 
+# DROP-DOWN SELECTON OPTIONS
+
+# Species group
+list_sppgroup <- dat_all %>% 
+  pull(species_group) %>% 
+  unique()
+
+# Species
+list_spp <- dat_all %>% 
+  filter(species_group=="Waterfowl") %>% # FILTER BY PREVIOUS
+  pull(common_name) %>% 
+  unique()
+
+# Country
+list_country <- dat_all %>% 
+  pull(country) %>% 
+  unique() %>% 
+  str_sort()
+
+# Province
+list_province <- dat_all %>% 
+  filter(country=="United States") %>% # FILTER BY PREVIOUS
+  pull(province) %>%
+  unique() %>% 
+  str_sort()
+
+# Year
+list_year <- dat_all %>% 
+  pull(year) %>% 
+  unique() %>% 
+  str_sort()
+
+# INTERACTIVE MAP
+
+dat_sf %>% 
+  # Filter
+  filter(species_group=="Waterfowl") %>%
+  # filter(common_name=="Canada Goose") %>% 
+  # Data wrangling
+  group_by(submission_id, location, geometry) %>% 
+  summarise() %>% 
   group_by(location, geometry) %>% 
   summarise(n = length(location)) %>% 
+  arrange(-n) %>% 
   ungroup() %>% 
   mutate(loggedn = ifelse(n==1, 0.2/log(max(n),10), # change n=1 obs
                           log(n,10)/log(max(n),10))) %>% 
@@ -95,7 +169,7 @@ ebird_sf %>%
   leaflet() %>% 
   addProviderTiles(providers$Esri.WorldGrayCanvas) %>%  
   addCircleMarkers(
-    radius = ~loggedn*12+2,
+    radius = ~loggedn*10+3,
     # color = ~pal(type),
     stroke = FALSE, fillOpacity = 0.5,
     label = ~location,
@@ -104,9 +178,5 @@ ebird_sf %>%
 
 ```
 
-[Options for basemaps](https://leaflet-extras.github.io/leaflet-providers/preview/index.html)
-- Esri.WorldGrayCanvas
-- Esri.WorldImagery
-- Esri.WorldStreetMap
-- Esri.WorldPhysical
-- Esri.WorldShadedRelief
+Potentially consider only redrawing layers that change using [leafletProxy](https://rstudio.github.io/leaflet/articles/shiny.html) - could stop map from re-zooming every time a switch is toggled
+
