--- a/figure_scratchbook.Rmd
+++ b/figure_scratchbook.Rmd
@@ -24,47 +24,46 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE,
 # Packages
 library(tidyverse)
 library(janitor) # clean column names
+library(prettyunits) # readable time formats
 library(kableExtra) # pretty tables
+library(plotly) # interactive plots
 library(leaflet) # interactive maps
 library(sf) # spatial functions
 library(ISOcodes) # ISO country/province codes
 
 # Raw personal eBird data
 dat_personal <- read_csv("./data/MyEBirdData.csv") %>%
-  clean_names() %>% 
-  mutate(year = year(date))
-
-# eBird taxonomy 
-dat_taxonomy <- read_csv("./data/eBird_taxonomy_v2024.csv") %>% 
   clean_names() %>%
-  separate(family, c("family", "family_common_name"), sep = "\\(|\\)") %>% 
+  mutate(date = ymd(date),
+         year = year(date),
+         time = ymd_hms(paste(date, time)))
+
+# eBird taxonomy
+dat_taxonomy <- read_csv("./data/eBird_taxonomy_v2024.csv") %>%
+  clean_names() %>%
+  separate(family, c("family", "family_common_name"), sep = "\\(|\\)") %>%
   select(-taxon_concept_id, -report_as)
 
 # ISO codes
-iso_country <- ISO_3166_1 %>% 
-  clean_names() %>% 
-  mutate(country = if_else(is.na(common_name), name, common_name)) %>% 
+iso_country <- ISO_3166_1 %>%
+  clean_names() %>%
+  mutate(country = if_else(is.na(common_name), name, common_name)) %>%
   select("country_code"=alpha_2, country)
-iso_province <- ISO_3166_2 %>% 
-  rename(province_code = Code, province = Name, province_type = Type) %>% 
-  mutate(country_code = str_sub(province_code, end=2)) %>% 
+iso_province <- ISO_3166_2 %>%
+  rename(province_code = Code, province = Name, province_type = Type) %>%
+  mutate(country_code = str_sub(province_code, end=2)) %>%
   select(-Parent)
 dat_iso <- full_join(iso_country, iso_province, by = "country_code")
 
-```
-
-```{r data wrangling}
-
 # Combine personal data, taxonomy, and ISO codes
-
 dat_all <- left_join(dat_personal, dat_taxonomy,
-                     by = c("scientific_name"="sci_name")) %>% 
+                     by = c("scientific_name"="sci_name")) %>%
   left_join(dat_iso,
-            by = c("state_province"="province_code")) %>% 
+            by = c("state_province"="province_code")) %>%
   select(-primary_com_name, -country_code)
 
-# Observation point data
-dat_sf <- st_as_sf(dat_all, coords = c("longitude","latitude")) %>% 
+# Make into spatial sf dataframe
+dat_sf <- st_as_sf(dat_all, coords = c("longitude","latitude")) %>%
   st_set_crs(4326) # set CRS to WGS84
 
 ```
@@ -91,27 +90,111 @@ Data cleaning to do:
 
 Toggle by taxonomic groups
 
-## Top ten most frequently observed species
+## Top Ten Species
 
-```{r top ten}
+```{r top ten species}
 
-# Summary table
-
-summary <- dat_all %>% 
+summary_topten <- dat_all %>% 
   group_by(common_name, scientific_name) %>% 
   summarize(n = length(common_name)) %>% 
   ungroup() %>% 
   arrange(-n) %>% 
   top_n(10)
 
-kable(summary[,1:3], col.names = c("Common name", "Latin binomial", "Observations")) %>% 
+kable(summary_topten, col.names = c("Common name", "Latin binomial", "Observations")) %>% 
   kable_styling(bootstrap_options = c("striped", "condensed"),
                 full_width = FALSE,
                 position = 'left') %>% 
-  column_spec(2, italic = TRUE) %>% 
-  column_spec(1, width = '5cm')
+  column_spec(2, italic = TRUE) 
 
 ```
+
+## Personal Hotspots
+
+```{r personal hotspots}
+
+# Most Visited
+
+summary_visited <- dat_all %>% 
+  group_by(location) %>% 
+  summarize(n = length(unique(submission_id))) %>% 
+  ungroup() %>% 
+  arrange(-n) %>% 
+  top_n(5)
+
+kable(summary_visited, col.names = c("Hotspot", "Checklists")) %>% 
+  kable_styling(bootstrap_options = c("striped", "condensed"),
+                full_width = FALSE,
+                position = 'left')
+
+# Most Speciose
+
+summary_speciose <- dat_all %>% 
+  group_by(location) %>% 
+  summarize(n = length(unique(common_name))) %>% 
+  ungroup() %>% 
+  arrange(-n) %>% 
+  top_n(5)
+
+kable(summary_speciose, col.names = c("Hotspot", "Species")) %>% 
+  kable_styling(bootstrap_options = c("striped", "condensed"),
+                full_width = FALSE,
+                position = 'left')
+
+```
+
+## Time Spent Birding
+
+```{r time histogram}
+
+# Total time spent birding
+
+dat_all %>% 
+  select(submission_id, duration_min) %>% 
+  distinct() %>% 
+  summarise(sum = sum(duration_min, na.rm=TRUE))
+
+# Histogram
+
+by_min <- dat_all %>% 
+  select(submission_id, time, duration_min) %>% 
+  distinct() %>% 
+  na.omit() %>% 
+  uncount(duration_min) %>% 
+  group_by(submission_id) %>% 
+  mutate(add_min = row_number()-1,
+         by_min = time + add_min*60,
+         hour = hour(by_min)) %>% 
+  group_by(hour) %>% 
+  summarize(n = length(hour)) %>% 
+  mutate(time = pretty_dt(make_difftime(n*60)),
+         interval = )
+
+plot_ly(
+  by_min, x = ~hour, y = ~n,
+  customdata = ~time,
+  type = "bar",
+  marker = list(color = "lightblue",
+                line = list(color = "black",
+                            width = 1)),
+  hovertemplate = paste0("<b>%{x:,.0f}</b><br>",
+                         "%{y:,.0f} minutes spent birding<br>",
+                         "(%{customdata})")
+  ) %>% 
+  layout(
+    xaxis = list(range=(c(0,24)), 
+                 fixedrange = TRUE),
+    yaxis = list(fixedrange = TRUE),
+    bargap = 0,
+    hoverlabel = list(align = "left")
+  ) %>% 
+  config(
+    displayModeBar = FALSE
+  )
+
+
+```
+
 
 ## Interactive map
 
